gcc/testsuite/gdc.test/compilable/imports/test11225c.d
module imports.test11225c;
// empty
