gcc/testsuite/gdc.test/fail_compilation/imports/ice11513y.d
module ice11513b.imports.ice11513y;
